# openteams

./: .gitignore  AGENTS.md  README.md  design-md-projects-research.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tmp_onboarding.txt  ui-design-skills-research.md  update.py
crates/db/: Cargo.toml
crates/db/.sqlx/: query-088804ff48afbd96726e5df25e9e24902e8f8c89d3d4d6cff2c76cac1fa4f0df.json  query-0ab07fb562e61148f3f07f33f766ea12c73d467df4522240008370f681c8409a.json  query-0cfa254e9f02b49fb48a9a7381fd731470711d874a7aa16af22be6507e553ef2.json  query-137a390c342c07129b038d65cda33419f8506d32883cca0ace178925559b0234.json  query-283e759c32f6f5aa34859ed8584c491e198cb9d056c44d8cd56d3d31733d7e69.json  query-28887384898d718bbdab348631d5a8a5fda9937adee6f747dee6bcaf2b978fee.json  query-2b18aadd0f15f4841cfb3b509ab37b6a53da832032841b53a151f75f658975af.json  query-2b302d4e32678e884092900ee8330c3dca19fabacb83ca7dd264b77517978081.json  query-2b80f8de2f56f0fc2fcce24e4ee2ac1844c135428657a386094f3f3a3ebc1690.json  query-2e3c32d368af95f5e8eca3e42ae3a18a3db4770637591fdb1cf05309f4d68f3c.json  query-2f4ef55419b367d931e62510283861751ebb2c0dc5ac21937ec5540141eb62f2.json  query-37ad178cf836c529cfdddc4031cd58f1d46e6b0ebcdf3995fb5753fc6465873d.json  query-3a2a4a2f84c79c766af3fa8ef196680772096e202329fcaf191e9b8b78e1862d.json  query-3aacbe87457ee95dca676707a8067388affbf813058913f510e6ea3635ea94c0.json  query-3dc18f67a55257209db935d2d1e7bc2b869fcb51d8a92e52ede3e6e7ee07f4ab.json  query-420beb64f65e11c97e234f5c2d5420b8bda91e6fe043f5590b266f497c69a7fd.json  query-4fa0baa1b1af720e485b1a29ad4af4469e201072db59edfaa2fbafe46b4e6681.json  query-50c84219bec9a0910a145e09a2280f73c0f0ac652b8a08aa29a5fb79d3c90292.json  query-5ba3b61fceae197138a9418e48c8bad08e246ee99b3b1a355907c26c8349bb1f.json  query-5d7898134a2fd7cca2b5c1c58b09c75904ece6f7963ba5d3269def73683a6600.json  query-6821f2f2c1bdb765041de240789e6d941dc8a9927e304ac75e04175a64e48472.json  query-6bb7b3a8820cb60844d54ffca9a0bb6e5d480e2b54044088f089e6bab1f59a1f.json  query-6eabc7486dfa1814d516efb155a312a1f4d3681f7f486505475a2cda3c01c956.json  query-6f434c637c0a86c17969c421dd57fb5860f823221cb242052424eacbbd387767.json  query-7cbb52ce17991c9c4544744f072d8e4262c4a979ca965fbeeea09925e7a5a1e7.json  query-7fd9628b96cc3640521f832dd4154fd46b8eaa9f6db314146cf63cd3fb629f70.json  query-87cca96f9d6345cc8973fd7d875739e33b97e7238ae7ea01a3b24c9b3da8c44f.json  query-93bc5eef3ae30e4c89379e2038ab04723047d77e10fe6f763fbb9aea3858b974.json  query-96779b9f135268354c8291e128b6a08668579939e54280edb1236f2d5f1f7ff2.json  query-99adea4be4878131dcd05e8576ee0cac5003cd5b21c2619edbf120a73643a16d.json  query-9fbecf45f265fda1355551b594573ac5d1264a287d524118e99db883c951e91c.json  query-a9c5a21cee4db98c24dee558f99c287a32e75d20285dc4d12f8251aade57a52f.json  query-acea5dd3637a9772259145b8ffd62e2454662262cee20bee4c346c4266791a38.json  query-af006680de4442811e89fc31743abc686af66480a921fa9983c3504cac9ab115.json  query-b7da786a586e703d049aedfecba0c0b8d1b132322a4df90fe9f06dc12563b93d.json  query-b7fd265a4a8d123fcb79f3c6e92a7e21005a1431597e4028b560e35883f2cd0a.json  query-ba26eb36763c376b14264a90b03b8f98e12135197e98d90315bfc3db0a9ac4e2.json  query-bcb56ea533b2c5b0bef12ec172704d5b471047c3a40c9a073ed2dce837aa2af4.json  query-ca308c06e2e846fc6335d42426dc34d56cde4912a6d84ceaef3d97f3e29c670b.json  query-d6c1e52d0e151b43c39d069708cd72692d736bd91c20282c554fe16796cade34.json  (+8 more)
crates/db/migrations/: 20260418100000_create_workflow_plans.sql  20260418100100_create_workflow_plan_revisions.sql  20260418100200_create_workflow_executions.sql  20260418100300_create_workflow_rounds.sql  20260418100400_create_workflow_steps_and_edges.sql  20260418100500_create_workflow_agent_sessions.sql  20260418100600_create_workflow_events.sql  20260420100000_create_workflow_transcripts.sql  20260422120000_simplify_workflow_execution_statuses.sql  20260423100000_unify_workflow_agent_session_waiting_states.sql  20260516120000_add_chat_input_mode_to_chat_sessions.sql  20260531120000_add_project_centric_backend_schema.sql  20260603120000_add_member_execution_config.sql  20260607190000_add_project_work_item_statuses.sql  20260607203000_add_project_work_item_labels.sql  20260611160000_add_commit_created_delivery_event.sql  20260622120000_create_chat_session_worktrees.sql  20260622130000_add_chat_session_worktree_mode.sql  20260623030000_add_chat_session_pinned_at.sql  20260623144500_drop_legacy_task_workspaces.sql  20260629090000_create_onboarding_state.sql  20260629142000_extend_onboarding_project_fields.sql
crates/db/src/: lib.rs
crates/db/src/models/: chat_agent.rs  chat_message_queue.rs  chat_run.rs  chat_session.rs  chat_session_agent.rs  chat_session_worktree.rs  image.rs  member_execution_config.rs  merge.rs  mod.rs  onboarding_state.rs  project.rs  project_delivery_event.rs  project_delivery_record.rs  project_member.rs  project_path.rs  project_stats.rs  project_work_item.rs  project_work_item_execution_link.rs  repo.rs  repo_integration.rs  scratch.rs  workflow_agent_session.rs  workflow_event.rs  workflow_execution.rs  workflow_loop.rs  workflow_plan.rs  workflow_plan_revision.rs  workflow_round.rs  workflow_step.rs  workflow_step_edge.rs  workflow_transcript.rs  workflow_types.rs
crates/deployment/: Cargo.toml
crates/deployment/src/: lib.rs
crates/executors/: Cargo.toml  default_profiles.json
crates/executors/src/: model_discovery.rs  model_sync.rs  profile.rs  skill_config.rs
crates/executors/src/executors/: claude.rs  codex.rs  gemini.rs  opencode.rs  (+2 more)
crates/git/: Cargo.toml
crates/git/tests/: git_ops_safety.rs
crates/local-deployment/: Cargo.toml
crates/local-deployment/src/: container.rs  lib.rs
crates/review/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: error.rs  main.rs  npx_browser_lifecycle.rs
crates/server/tests/: worktree_integration_smoke.rs
crates/services/: Cargo.toml
crates/services/tests/: workflow_instrumentation_wiring.rs
crates/utils/: Cargo.toml
crates/utils/src/: text.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/src/: main.rs
(+559 files in other folders)
