[package]
name = "openteams-desktop"
version = "0.3.17"
description = "OpenTeams Desktop"
authors = ["openteams-lab"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
tauri = { version = "1.8", features = ["updater", "custom-protocol", "process-command-api", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portpicker = "0.1"
directories = "5"

[features]
# this feature is used for production builds where `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
