[package]
name = "openteams-desktop"
version = "0.4.7"
description = "OpenTeams Desktop"
authors = ["openteams-lab"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
tauri = { version = "1.8", features = ["updater", "custom-protocol", "process-command-api", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portpicker = "0.1"
directories = "5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Com", "Win32_UI_Shell", "Win32_UI_Shell_Common"] }

[features]
# this feature is used for production builds where `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
