[package]
name = "git"
version = "0.3.17"
edition = "2024"

[features]
default = []
cloud = []

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
git2 = { workspace = true }
serde = { workspace = true }
tempfile = "3.21"
thiserror = { workspace = true }
tracing = { workspace = true }
ts-rs = { workspace = true }
utils = { path = "../utils" }

[dev-dependencies]
tempfile = "3.21"
