[package]
name = "services"
version = "0.3.17"
edition = "2024"

[features]
default = []
cloud = []
qa-mode = ["executors/qa-mode"]

[dependencies]
utils = { path = "../utils" }
git = { path = "../git" }
executors = { path = "../executors" }
db = { path = "../db" }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = "2.5"
anyhow = { workspace = true }
tracing = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "sqlite", "sqlite-preupdate-hook", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ts-rs = { workspace = true }
dirs = "5.0"
git2 = { workspace = true }
tempfile = "3.21"
async-trait = { workspace = true }
enum_dispatch = "0.3.13"
rust-embed = "8.2"
ignore = "0.4"
regex = "1.11.1"
notify-rust = "4.11"
os_info = "3.12.0"
reqwest = { workspace = true }
futures-util = "0.3"
json-patch = "2.0"
backon = "1.5.1"
base64 = "0.22"
serde_yaml = "0.9"
thiserror = { workspace = true }
futures = "0.3.31"
tokio-stream = "0.1.17"
strum_macros = "0.27.2"
strum = "0.27.2"
notify = "8.2.0"
notify-debouncer-full = "0.5.0"
dunce = "1.0"
dashmap = "6.1"
once_cell = "1.20"
sha2 = "0.10"
fst = "0.4"
secrecy = "0.10.3"
moka = { version = "0.12", features = ["future", "sync"] }
command-group = { version = "5.0", features = ["with-tokio"] }
tiktoken-rs = "0.6"
sys-locale = "0.3"
which = "7.0"
pathdiff = "0.2"
